[package]
name = "rsomics-sc-dendrogram"
version = "0.1.0"
description = "Hierarchical clustering of single-cell groupby categories — scanpy sc.tl.dendrogram port (group-mean aggregation, correlation distance, scipy linkage + dendrogram leaf ordering)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-sc-dendrogram"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-sc-dendrogram"
path = "src/main.rs"

[lib]
name = "rsomics_sc_dendrogram"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
